@startuml

class Main

abstract gui.ControllerManager
enum gui.Controllers

class gui.controller.LoadSceneController
class gui.controller.AboutController
class gui.controller.AboutLicensesController
class gui.controller.KanjiSearchController
class gui.controller.KanjiEditorController

class util.DBConnectionPool <<Singleton>>

abstract util.Logger
class util.DatabaseConnection

gui.ControllerManager ..> gui.controller.LoadSceneController
gui.ControllerManager ..> gui.controller.AboutController
gui.ControllerManager ..> gui.controller.AboutLicensesController
gui.ControllerManager ..> gui.controller.KanjiSearchController
gui.ControllerManager ..> gui.controller.KanjiEditorController

util.DBConnectionPool --> util.DatabaseConnection

gui.controller.KanjiSearchController --> util.DBConnectionPool
gui.controller.KanjiBrowserController --> util.DBConnectionPool
gui.controller.KanjiEditorController --> util.DBConnectionPool

@enduml